# tree-sitter-gnuplot

./: .gitattributes  .gitignore  .release-please-config.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  REWORK.md  binding.gyp  codecov.yml  go.mod  grammar.js  keywords.json  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  labeler.yml  package-crates.yml  package-npm.yml  package-pypi.yml  pr.yml  release.yml
bindings/c/: tree-sitter-gnuplot.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gnuplot/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGnuplotTests/: TreeSitterGnuplotTests.swift
bindings/swift/TreeSitteryes/: gnuplot.h
bindings/swift/TreeSitteryesTests/: TreeSitteryesTests.swift
docs/: deferred.md
queries/: folds.scm  highlights.scm  injections.scm
scripts/: gen-keywords.mjs
src/: grammar.json  node-types.json  scanner.c
test/corpus/: assignments.txt  commands.txt  comments.txt  control_flow.txt  multiplot.txt  operators.txt  set_gopts.txt  strings.txt  terminals.txt
