[package]
name = "tree-sitter-gnuplot"
description = "gnuplot grammar for the tree-sitter parsing library"
version = "2.0.0"
keywords = ["incremental", "parsing", "gnuplot"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-gnuplot"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

