[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gnuplot"
description = "A tree-sitter grammar for gnuplot"
version = "2.0.2" # x-release-please-version
keywords = ["incremental", "parsing", "tree-sitter", "gnuplot"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Dai López Jacinto", email = "dpezto@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/dpezto/tree-sitter-gnuplot"
Funding = "https://github.com/dpezto/tree-sitter-gnuplot"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
